# sessfind

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  mkdocs.yml  release-please-config.json  release-plz.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/scripts/: publish-crates.sh
.github/workflows/: ci.yml  docs.yml  pr-check.yml  publish-crates.yml  release-app-assets.yml  release-app-cargo.yml  release-assets.yml  release-plz.yml  release-vscode-assets.yml  release-vscode-marketplace.yml  release-vscode.yml  sdd.yml  vscode.yml
crates/sessfind/: CHANGELOG.md  Cargo.toml
crates/sessfind-common/: CHANGELOG.md  Cargo.toml
crates/sessfind-common/src/: lib.rs
crates/sessfind-semantic/: CHANGELOG.md  Cargo.toml
crates/sessfind-semantic/src/: embedder.rs  main.rs  store.rs
crates/sessfind/src/: commands.rs  config.rs  llm.rs  main.rs  metadata.rs  models.rs  semantic.rs  service.rs  version_check.rs  watcher.rs
crates/sessfind/src/indexer/: chunker.rs  engine.rs  state.rs
crates/sessfind/src/platform/: mod.rs  paths.rs  process.rs  service.rs
crates/sessfind/src/search/: fts.rs  mod.rs  results.rs
crates/sessfind/src/sources/: claude_code.rs  codex.rs  copilot.rs  cursor.rs  mod.rs  opencode.rs
crates/sessfind/src/tui/: app.rs  input.rs  mod.rs  ui.rs
crates/sessfind/tests/: cli.rs  engine.rs
docs/: automatic-indexing.md  contributing.md  index.md
docs/architecture/: dependencies.md  how-it-works.md  project-structure.md
docs/assets/: tui-demo.tape  tui-fts.tape  tui-fuzzy.tape  tui-resume.tape
docs/getting-started/: installation.md  quick-start.md
docs/plugins/: semantic-search.md
docs/usage/: agent-skill.md  automatic-indexing.md  cli.md  llm-configuration.md  search-modes.md  tui.md  vscode.md
editors/vscode/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  esbuild.mjs  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
editors/vscode/src/commands/: manage.ts  newSession.ts  prompts.ts  search.ts  searchHelpers.test.ts  searchHelpers.ts  terminal.ts
editors/vscode/src/hub/: highlight.test.ts  highlight.ts  hubViewProvider.ts  model.test.ts  model.ts  protocol.ts
editors/vscode/src/hub/webview/: contextMenu.ts  hub.css  main.ts
editors/vscode/src/preview/: projectDocumentProvider.ts  renderProject.test.ts  renderProject.ts  renderSession.test.ts  renderSession.ts  renderStats.test.ts  renderStats.ts  sessionDocumentProvider.ts  statsDocumentProvider.ts
editors/vscode/src/sessfind/: client.ts  types.ts
editors/vscode/src/state/: filter.test.ts  filter.ts
editors/vscode/src/util/: execCapture.ts  parseTags.test.ts  parseTags.ts  sanitize.test.ts  sanitize.ts  shellQuote.test.ts  shellQuote.ts
editors/vscode/src/views/: autoProjectsTree.ts  dirTree.test.ts  dirTree.ts  grouping.test.ts  grouping.ts  items.ts  membership.test.ts  membership.ts  searchBoxView.ts  tagIndex.test.ts  tagIndex.ts  tagsTree.ts  userProjectsTree.ts
skills/sessfind/: SKILL.md
spec/: README.md  catalog-index.md  vscode-extension.md
src/: config.rs  interactive.rs  main.rs  models.rs
src/indexer/: chunker.rs  engine.rs  mod.rs  state.rs
src/sources/: claude_code.rs  mod.rs  opencode.rs
src/tui/: app.rs  input.rs  mod.rs  ui.rs
