[package]
name = "sessfind-common"
version = "0.4.1"
edition = "2024"
rust-version = "1.88"
description = "Shared types and utilities for the sessfind workspace."
license = "MIT"
repository = "https://github.com/letsdev-it/sessfind"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
