[package]
name = "sessfind-semantic"
version = "0.1.2"
edition = "2024"
rust-version = "1.88"
description = "Semantic search plugin for sessfind — optional, uses embedded ML model."
license = "MIT"
repository = "https://github.com/letsdev-it/sessfind"

[dependencies]
sessfind-common = "0.2.0"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
fastembed = "4"
rusqlite = { version = "0.35", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlite-vec = "0.1"
which = "7"

[dev-dependencies]
tempfile = "3"
