[package]
name = "sessfind"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "CLI tool to search and resume AI sessions across Github Copilot, Claude Code, and OpenCode."
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/letsdev-it/sessfind"
keywords = ["cli", "search", "tui", "ai", "sessions"]
categories = ["command-line-utilities"]

[dependencies]
sessfind-common = "0.1.0"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
rayon = "1"
rusqlite = { version = "0.35", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossterm = "0.28"
ratatui = "0.29"
serde_yaml = "0.9"
tantivy = "0.22"
unicode-width = "0.2"
walkdir = "2"
which = "7"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
